# VisionSoftware

./: .gitignore  CMakeLists.txt  README.md  doxygen-config  main.cpp  main1.cpp
.cache/clangd/index/: main.cpp.971EF2B33A823F8B.idx
doxygen/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeFiles_2VisionSoftware_8dir_2link_8txt.html  CMakeLists_8txt.html  README_8md.html  TargetDirectories_8txt.html  annotated.html  classCartesianCoordinate-members.html  classCartesianCoordinate.html  classCartesianCoordinate__coll__graph.map  classTiXmlAttribute-members.html  classTiXmlAttribute.html  classTiXmlAttributeSet-members.html  classTiXmlAttributeSet.html  classTiXmlAttributeSet__coll__graph.map  classTiXmlAttributeSet__coll__graph.md5  classTiXmlAttribute__coll__graph.map  classTiXmlAttribute__coll__graph.md5  classTiXmlAttribute__inherit__graph.map  classTiXmlAttribute__inherit__graph.md5  classTiXmlBase-members.html  classTiXmlBase.html  classTiXmlBase__coll__graph.map  classTiXmlBase__coll__graph.md5  classTiXmlBase__inherit__graph.map  classTiXmlBase__inherit__graph.md5  classTiXmlComment-members.html  classTiXmlComment.html  classTiXmlComment__coll__graph.map  classTiXmlComment__coll__graph.md5  classTiXmlComment__inherit__graph.map  classTiXmlComment__inherit__graph.md5  classTiXmlDeclaration-members.html  classTiXmlDeclaration.html  classTiXmlDeclaration__coll__graph.map  classTiXmlDeclaration__coll__graph.md5  classTiXmlDeclaration__inherit__graph.map  classTiXmlDeclaration__inherit__graph.md5  classTiXmlDocument-members.html  (+273 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+70 more)
doxygen/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  CMakeCache_8txt.tex  CMakeFiles_2VisionSoftware_8dir_2link_8txt.tex  CMakeLists_8txt.tex  annotated.tex  classCartesianCoordinate.tex  classCartesianCoordinate__coll__graph.md5  classTiXmlAttribute.tex  classTiXmlAttributeSet.tex  classTiXmlAttributeSet__coll__graph.md5  classTiXmlAttribute__coll__graph.md5  classTiXmlAttribute__inherit__graph.md5  classTiXmlBase.tex  classTiXmlBase__coll__graph.md5  classTiXmlBase__inherit__graph.md5  classTiXmlComment.tex  classTiXmlComment__coll__graph.md5  classTiXmlComment__inherit__graph.md5  classTiXmlDeclaration.tex  classTiXmlDeclaration__coll__graph.md5  classTiXmlDeclaration__inherit__graph.md5  classTiXmlDocument.tex  classTiXmlDocument__coll__graph.md5  classTiXmlDocument__inherit__graph.md5  classTiXmlElement.tex  classTiXmlElement__coll__graph.md5  classTiXmlElement__inherit__graph.md5  classTiXmlHandle.tex  classTiXmlHandle__coll__graph.md5  classTiXmlNode.tex  classTiXmlNode__coll__graph.md5  classTiXmlNode__inherit__graph.md5  classTiXmlOutStream.tex  classTiXmlOutStream__coll__graph.md5  classTiXmlOutStream__inherit__graph.md5  classTiXmlPrinter.tex  classTiXmlPrinter__coll__graph.md5  classTiXmlString.tex  classTiXmlString__coll__graph.md5  (+97 more)
src/: CMakeLists.txt  main.cpp
src/UIcomponent/: CMakeLists.txt  log.cpp
src/UIcomponent/include/: log.h
src/builds/: imgui.ini
src/builds/output/path/: path1712715246.txt  path1712909959.txt  path1712912312.txt  path1713152057.txt  path1713152696.txt  path1713152828.txt
src/device/: CMakeLists.txt
src/device/image_processing/: CMakeLists.txt  imgproc.cpp
src/device/image_processing/include/: imgproc.h
src/device/kuka_eki_hw_interface/: CMakeLists.txt  kuka_eki_hw_interface.cpp  kuka_eki_hw_interface_node.cpp
src/device/kuka_eki_hw_interface/include/coordinate/: coordinate.cpp  coordinate.h
src/device/kuka_eki_hw_interface/include/kuka_eki_hw_interface/: kuka_eki_hw_interface.h
src/device/kuka_eki_hw_interface/krl/: EkiHwInterface.xml  README.md  kuka_eki_hw_interface.src
src/deviceConnect/: CMakeLists.txt  devCamConnect.cpp  devRobConnect.cpp
src/deviceConnect/include/: devCamConnect.h  devRobConnect.h
src/glovalue/: CMakeLists.txt  gvalue.cpp  swd.cpp
src/glovalue/include/: gvalue.h
src/process/: CMakeLists.txt
src/process/image/: CMakeLists.txt  imgproc.cpp
src/process/image/include/: imgproc.h
